<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/flash_light_on_screen_off" />


    <TextView
        android:id="@+id/preview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="15dp"
        android:text="@string/preview"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/flash_ring_hint1" />

    <TextView
        android:id="@+id/do_not_disturb_time_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:onClick="pickTimeRange"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:text="勿扰时段：00:00-07:00" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/flash_ring_hint2" />

    <TextView
        android:id="@+id/service_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/bg_service_status_button"
        android:drawableStart="@drawable/ic_service_status_selector"
        android:drawablePadding="10dp"
        android:drawableTint="@color/service_status"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:textColor="@color/service_status"
        android:textSize="15sp"
        tools:text="@string/enable_service" />

</LinearLayout>