<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/app_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ActionMenuView
            android:id="@+id/menu_view"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/button_style_ring"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_style_button"
                android:contentDescription="@string/type_ring"
                android:padding="5dp"
                android:src="@drawable/ic_type_ring"
                android:tint="@color/tint_style_button" />

            <ImageView
                android:id="@+id/button_style_double_ring"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_style_button"
                android:contentDescription="@string/type_double_ring"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/ic_type_double_ring"
                android:tint="@color/tint_style_button" />

            <ImageView
                android:id="@+id/button_style_pill"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_style_button"
                android:contentDescription="@string/type_pill"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_type_pill"
                android:tint="@color/tint_style_button" />

        </LinearLayout>
    </FrameLayout>

    <cn.vove7.energy_ring.ui.NoScrollableViewPager
        android:id="@+id/style_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <Button
            android:id="@+id/view_info_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/view_config"
            android:textColor="#fff" />

        <Button
            android:id="@+id/import_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/import_from_clipboard"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>
